---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2022-01-03
  Features:
    - Added setting "Reskin interface" which supports visual changes and updates to the crafting tabs
    - Pipes have been adjusted to have separate shadow layers, eliminating the shadow overlay with other entities when placing pipes
    - Additions of EmmyLua-style documentation is ongoing
  Changes:
    - Moved reskinning of the standard Factorio pipe into this mod from Artisanal Reskins: Angel's mods
    - Internal restructuring to make entity reskinning through functions globally available under `reskins.lib.apply_skin` is ongoing
  Bugfixes:
    - Fixed that `rescale_entity` was ignoring Types/Animation defined with stripes or filenames instead of filename
    - Fixed that highlights were not being applied to transport belt remnants
  Locale:
    - Updated Russian localization
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2021-12-12
  Changes:
    - Moved code within `composite_existing_icons` into separate function `composite_existing_icons_onto_icons_definition`
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2021-09-29
  Changes:
    - Entity rescaling function now processes values attached to a `position` field.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2021-09-14
  Features:
    - Added Nauvius Day to compatibility whitelist
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2021-09-12
  Changes:
    - Revised handling for entities using `belt_animation_set`