@@ -12,6 +12,7 @@
         "(?) bobassembly",
         "(?) boblogistics",
         "(?) angelspetrochem",
-        "(?) angelsindustries"
+        "(?) angelsindustries",
+        "! bobmods_gfxtweak"
     ]
 }
