@@ -162,7 +162,9 @@ end
 ---Reskins the named assembling machine with vanilla-style oil refinery sprites and color masking, and sets up appropriate corpse, explosion, and particle prototypes
 ---@param name string # [Prototype name](https://wiki.factorio.com/PrototypeBase#name)
 ---@param tier integer # 1-6 are supported, 0 to disable
-function reskins.lib.apply_skin.oil_refinery(name, tier)
+---@param tint? table # [Types/Color](https://wiki.factorio.com/Types/Color)
+---@param make_tier_labels? boolean
+function reskins.lib.apply_skin.oil_refinery(name, tier, tint, make_tier_labels)
     ---@type inputs.setup_standard_entity
     local inputs = {
         type = "assembling-machine",
@@ -171,7 +173,8 @@ function reskins.lib.apply_skin.oil_refinery(name, tier)
         mod = "lib",
         group = "base",
         particles = {["big-tint"] = 5, ["medium"] = 2},
-        tint = reskins.lib.tint_index[tier],
+        tier_labels = make_tier_labels,
+        tint = tint and tint or reskins.lib.tint_index[tier],
     }
 
     local entity = data.raw[inputs.type][name]
